sumo/tests/sumo/errors/duplicates/net_lane/errors.sumo
Error: Another lane with the id '1to2_1' exists.
Quitting (on error).
